--- a/Analytics/files/Final.ipynb
+++ b/Analytics/files/Final.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -606,6 +613,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1094,6 +1108,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Most Popular Methods by the Users"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1170,6 +1191,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 'Most Popular URLs by the Users'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1203,6 +1231,13 @@
     "color = plt.cm.copper(np.linspace(0, 1, 40))\n",
     "data['URL_new'].value_counts().head(40).plot.bar(color = color)\n",
     "plt.title('Most Popular URLs by the Users', fontsize = 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Most Popular Months of Logins"
    ]
   },
   {
@@ -1275,6 +1310,13 @@
     "color = plt.cm.copper(np.linspace(0, 1, 40))\n",
     "data['day'].value_counts().head(40).plot.bar(color = 'tomato')\n",
     "plt.title('Most Popular Days of Logins', fontsize = 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Most Popular statuses for the Users"
    ]
   },
   {
